--- a/src/main/navigation-menu/navigation-menu.css
+++ b/src/main/navigation-menu/navigation-menu.css
@@ -1,6 +1,6 @@
 .navigation-menu-wrapper {
-  /* 8% - отступ логотипа от левого края, 35пх - ширина логотипа, 10% - отступ инпута поиска от логотипа слева */
-  width: calc(8% + 35px + 10%);
+  /* инициализация переменной в App.css */
+  width: var(--width-nav-menu);
   height: 100%;
 }
 .nav-menu {
