--- a/src/main/cards/card.css
+++ b/src/main/cards/card.css
@@ -9,7 +9,7 @@
   align-items: flex-start;
 }
 .card-info-profile {
-  width: 200px;
+  width: 65%;
 }
 .card-info-profile-title {
   font-size: 20px;
