--- a/src/main/aside/aside.css
+++ b/src/main/aside/aside.css
@@ -2,4 +2,5 @@
   /* инициализация переменной в App.css */
   width: var(--width-aside);
   height: 100%;
+  /* background-color: rgb(184, 184, 238); */
 }
