--- a/src/main/main-page/main-page.css
+++ b/src/main/main-page/main-page.css
@@ -11,7 +11,8 @@
   display: grid;
   padding-top: 30px;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-columns: 360px; 
+  grid-auto-columns: 360px;
+  /* grid-auto-rows: 260px; */
   gap: 30px;
   padding-bottom: 100px;
 }
